Fixed issue with footer having a gap beneath it

--- a/app/styles/themes/main.scss
+++ b/app/styles/themes/main.scss
@@ -1428,7 +1428,6 @@ footer {
 
 .footer-background {
   background-color: $footer-colour;
-  height: 40px;
   padding-top: 10px;
 }
 
